added add customer activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:name=".MenuActivity"
             android:label="@string/title_activity_menu" />
         <activity android:name=".AboutActivity" />
+        <activity android:name=".AddCustomer"></activity>
     </application>
 
 </manifest>
