Forget GSon, doesn't suit what I wanted, created custom Json export on Invoice, renamed InvoiceCreate to InvoiceCreateActivity
InvoiceCreateActivity is as far as its gonna get without GenerateInvoice, moving on to GenerateInvoice

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
             android:name=".GenerateInvoiceActivity"
             android:label="@string/title_activity_generate_invoice"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".InvoiceCreate"></activity>
+        <activity 
+            android:name=".InvoiceCreateActivity">
+        </activity>
     </application>
 
 </manifest>
