created options layout for fragment and made app portrait mode only

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,25 +16,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".RegisterActivity" android:screenOrientation="portrait"/>
         <activity
             android:name=".MenuActivity"
-            android:label="@string/title_activity_menu" />
-        <activity android:name=".AboutActivity" />
-        <activity android:name=".AddCustomer" />
+            android:label="@string/title_activity_menu"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".AboutActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".AddCustomer" android:screenOrientation="portrait"/>
         <activity
             android:name=".GenerateInvoiceActivity"
             android:label="@string/title_activity_generate_invoice"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
         <activity 
-            android:name=".InvoiceCreateActivity">
+            android:name=".InvoiceCreateActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
