--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDOMAlPMh6jhWMKTkQSUSqpbxHdrLXUVV8" />
 
+        <activity android:name=".BackupAddressHandlerActivity"></activity>
     </application>
 
 </manifest>
