--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -46,12 +47,17 @@
             android:name=".InvoiceCreateActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name= ".BackupAddressHandlerActivity"
-            android:screenOrientation="portrait"/>
+            android:name=".BackupAddressHandlerActivity"
+            android:screenOrientation="portrait" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDOMAlPMh6jhWMKTkQSUSqpbxHdrLXUVV8" />
 
+        <activity
+            android:name=".InvoiceActionsActivity"
+            android:label="@string/title_activity_send_email"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
