options fragment shows user data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,10 +55,12 @@
         <activity
             android:name=".InvoiceActionsActivity"
             android:label="@string/title_activity_send_email"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".EditInvoiceActivity" />
-        <activity android:name=".Documents.CustomerPreview" />
-        <activity android:name=".CustomerDetailView"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".EditInvoiceActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".CustomerDetailView"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
